[package]
name = "sdo"
version = "0.1.0"
edition = "2021" # Rust editions define language features and idioms; "2021" is current standard, adding quality-of-life improvements, better module system, and more robust closure capture/inference than earlier editions.

[lib]
name = "sdo"
crate-type = ["cdylib", "rlib"]

[dependencies]
kiddo = "5.2"
rand = "0.8"
pyo3 = { version = "0.21", features = ["auto-initialize", "extension-module"] }
numpy = "0.21"
